Move musdb import

--- a/model_trainer.ipynb
+++ b/model_trainer.ipynb
@@ -19,7 +19,6 @@
     "import gc\n",
     "import IPython\n",
     "import matplotlib.pyplot as plt\n",
-    "import musdb\n",
     "import numpy\n",
     "import os\n",
     "import random \n",
@@ -82,11 +81,10 @@
    "outputs": [],
    "source": [
     "# https://sigsep.github.io/datasets/musdb.html#musdb18-compressed-stems\n",
-    "try:\n",
+    "if __name__ == \"__main__\":\n",
+    "    import musdb\n",
     "    db_train = musdb.DB(root=\"./musdb18\", subsets=\"train\")\n",
     "    db_test = musdb.DB(root=\"./musdb18\", subsets=\"test\")\n",
-    "except Exception:\n",
-    "    print(\"musdb18 dataset missing!\")\n",
     "\n",
     "db_sample_rate = 44100\n",
     "\n",
