Create final model and evaluation

--- a/model_trainer.ipynb
+++ b/model_trainer.ipynb
@@ -134,15 +134,18 @@
     "    else:\n",
     "        return sliding_window(abs)\n",
     "\n",
-    "def pre_process_track(track):\n",
+    "def pre_process_track(track, random_speed=True):\n",
     "    track.chunk_duration = pre_process_chunk_duration_seconds\n",
     "    track.chunk_start = random.uniform(0, track.duration - track.chunk_duration)\n",
-    "    sample_rate = int(\n",
-    "        db_sample_rate * random.uniform(\n",
-    "            1 - random_speed_multiplier, \n",
-    "            1 + random_speed_multiplier\n",
+    "    if random_speed:\n",
+    "        sample_rate = int(\n",
+    "            db_sample_rate * random.uniform(\n",
+    "                1 - random_speed_multiplier, \n",
+    "                1 + random_speed_multiplier\n",
+    "            )\n",
     "        )\n",
-    "    )\n",
+    "    else:\n",
+    "        sample_rate = db_sample_rate\n",
     "    \n",
     "    x = pre_process(\n",
     "        track.targets['linear_mixture'].audio.T,\n",
@@ -257,8 +260,8 @@
     "        layer_input, model_input, all_dense = inputs\n",
     "        return tf.math.multiply(\n",
     "            tf.math.divide(\n",
-    "                layer_input, \n",
-    "                tf.math.add_n(all_dense)\n",
+    "                tf.math.abs(layer_input), \n",
+    "                tf.math.reduce_sum(tf.math.abs(all_dense), axis=0)\n",
     "            ), \n",
     "            model_input\n",
     "        )\n",
@@ -320,10 +323,10 @@
     "        super().join(*args, **kwargs)\n",
     "        return self.result\n",
     "\n",
-    "def pre_process_batch(batch):\n",
+    "def pre_process_batch(batch, random_speed):\n",
     "    result = []\n",
     "    for track in batch:\n",
-    "        result.append(pre_process_track(track))\n",
+    "        result.append(pre_process_track(track, random_speed))\n",
     "    return result\n",
     "        \n",
     "def start_prep_multithreaded():\n",
@@ -346,7 +349,7 @@
     "    for chunk in train_chunks:\n",
     "        thread = ReturnValueThread(\n",
     "            target=pre_process_batch, \n",
-    "            args=(chunk,)\n",
+    "            args=(chunk, True,)\n",
     "        )\n",
     "        thread.start()\n",
     "        train_threads.append(thread)\n",
@@ -354,7 +357,7 @@
     "    for chunk in test_chunks:\n",
     "        thread = ReturnValueThread(\n",
     "            target=pre_process_batch, \n",
-    "            args=(chunk,)\n",
+    "            args=(chunk, False,)\n",
     "        )\n",
     "        thread.start()\n",
     "        test_threads.append(thread)\n",
@@ -419,6 +422,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eddccc6e-3101-45b1-8c5c-1fbc87274270",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1b6d9b65-117d-4c8b-b3ea-802f33e9436d",
    "metadata": {},
    "outputs": [],
@@ -459,7 +470,8 @@
     "    stft_bass = post_process(results[1], angle)\n",
     "    stft_other = post_process(results[2], angle)\n",
     "    stft_vocals = post_process(results[3], angle)\n",
-    "    \n",
+    "\n",
+    "    print(display_track.name)\n",
     "    display_stfts([stft_drums, stft_bass, stft_other, stft_vocals])\n",
     "    print(\"Original: \")\n",
     "    display_audio(get_inverse_stft(stft_input))\n",
@@ -472,14 +484,6 @@
     "    print(\"Vocals: \")\n",
     "    display_audio(get_inverse_stft(stft_vocals))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed18dedd-14cc-4b59-aa9d-ea201051282d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -563,7 +567,7 @@
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    model.save('./model_6000.keras')"
+    "    model.save('./model.keras')"
    ]
   },
   {
