--- a/model_viewer.ipynb
+++ b/model_viewer.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.models.load_model('./model.keras')\n",
+    "model = tf.keras.models.load_model('./model_800.keras')\n",
     "\n",
     "def predict(audio, sample_rate):\n",
     "    stft, angles = mt.pre_process(\n",
@@ -73,14 +73,6 @@
     "    + audio_tracks[3] # Vocals\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38de0e74-5b5a-4787-95ae-4b31476031e4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
